# eratosthenes

./: eratosthenes.cabal
src/: Main.hs
