name:                eratosthenes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/flounders/eratosthenes#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Williams
maintainer:          steven.m.williams@yandex.com
copyright:           2017 Steven Williams
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable eratosthenes
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , text
                     , text-show
                     , text-show-instances
